# elicitor

./: Cargo.toml  README.md  review.md
derive-dialoguer-wizard/: Cargo.toml
derive-dialoguer-wizard/examples/: basic_fields.rs  dialoguer_basic_fields.rs  dialoguer_enum_oneof.rs  dialoguer_job_application.rs  dialoguer_masked_input.rs  dialoguer_min_max_bounds.rs  dialoguer_multiline_text.rs  dialoguer_multiselect.rs  dialoguer_nested_struct.rs  dialoguer_optional_fields.rs  dialoguer_prelude_epilogue.rs  dialoguer_sandwich.rs  dialoguer_simple.rs  dialoguer_spooky_forest.rs  dialoguer_suggestions.rs  dialoguer_vec_lists.rs  enum_oneof.rs  job_application.rs  magic_forest.rs  masked_input.rs  min_max_bounds.rs  multiline_text.rs  multiselect.rs  nested_struct.rs  optional_fields.rs  prelude_epilogue.rs  sandwich.rs  simple.rs  suggestions.rs  validation.rs  vec_lists.rs
derive-dialoguer-wizard/src/: backend.rs  lib.rs
derive-egui-form/: Cargo.toml
derive-egui-form/examples/: basic_fields.rs  egui_enum_oneof.rs  egui_job_application.rs  egui_masked_input.rs  egui_min_max_bounds.rs  egui_optional_fields.rs  egui_prelude_epilogue.rs  egui_simple.rs  egui_spooky_forest.rs  egui_suggestions.rs  magic_forest.rs  multi_select.rs  multiline_text.rs  multiselect.rs  nested_struct.rs  nested_structs.rs  sandwich.rs  simple.rs  suggestions.rs  validation.rs  vec_lists.rs
derive-egui-form/src/: backend.rs  lib.rs
derive-html-document/examples/: basic_fields.rs  html_enum_oneof.rs  html_multiline_text.rs  html_multiselect.rs  html_nested_struct.rs  html_prelude_epilogue.rs  html_sandwich.rs  html_spooky_forest.rs  html_validation.rs  job_application.rs  magic_forest.rs  masked_input.rs  min_max_bounds.rs  optional_fields.rs  simple.rs  (+2 more)
derive-ratatui-form/: Cargo.toml
derive-ratatui-form/examples/: ratatui_form_spooky_forest.rs
derive-ratatui-form/src/: backend.rs  lib.rs
derive-ratatui-wizard/: Cargo.toml
derive-ratatui-wizard/examples/: enum_oneof.rs  job_application.rs  magic_forest.rs  masked_input.rs  multiline_text.rs  prelude_epilogue.rs  ratatui_basic_fields.rs  ratatui_min_max_bounds.rs  ratatui_multiselect.rs  ratatui_nested_struct.rs  ratatui_optional_fields.rs  ratatui_sandwich.rs  ratatui_simple.rs  ratatui_spooky_forest.rs  ratatui_validation.rs  sandwich.rs  simple.rs  suggestions.rs  vec_lists.rs
derive-ratatui-wizard/src/: backend.rs
derive-requestty-wizard/: Cargo.toml
derive-requestty-wizard/examples/: basic_fields.rs  enum_oneof.rs  job_application.rs  magic_forest.rs  min_max_bounds.rs  requestty_masked_input.rs  requestty_multiline_text.rs  requestty_multiselect.rs  requestty_nested_struct.rs  requestty_optional_fields.rs  requestty_prelude_epilogue.rs  requestty_simple.rs  requestty_spooky_forest.rs  requestty_suggestions.rs  requestty_vec_lists.rs  sandwich.rs  simple.rs  validation.rs
derive-requestty-wizard/src/: backend.rs  lib.rs
derive-survey/: Cargo.toml
derive-survey-macro/: Cargo.toml
derive-survey-macro/src/: lib.rs
derive-survey-macro/tests/: basic_derive.rs
derive-survey-requestty/: Cargo.toml
derive-survey-requestty/examples/: magic_forest.rs  simple.rs
derive-survey-requestty/src/: backend.rs  lib.rs
derive-survey-types/: Cargo.toml
derive-survey-types/src/: default_value.rs  error.rs  lib.rs  question.rs  response_path.rs  response_value.rs  responses.rs  survey_definition.rs  traits.rs
derive-survey/src/: lib.rs  test_backend.rs
derive-survey/tests/: integration.rs
derive-wizard/: Cargo.toml  README.md
derive-wizard-macro/: Cargo.toml
derive-wizard-macro/src/: enumeration.rs  error.rs  field_attrs.rs  infer.rs  lib.rs  structure.rs
derive-wizard-types/: Cargo.toml
derive-wizard/examples/: README.md  assumptions.rs  builder_api.rs  builder_comprehensive.rs  builder_egui.rs  deeply_nested.rs  defaults_demo.rs  dialoguer_defaults_demo.rs  dialoguer_demo.rs  dialoguer_password_demo.rs  dialoguer_suggestions_demo.rs  editor.rs  egui_suggestions_demo.rs  enum_gender.rs  enum_transport.rs  nested_enum_payment.rs  nested_wizard.rs  password_masking.rs  pathbuf_example.rs  rental_application.rs  showcase.rs  struct_with_enum_inspect.rs  suggestions_demo.rs  test_nested_field.rs  validation.rs
derive-wizard/examples/advanced/: deeply_nested.rs  enum_structure.rs  nested_enum_payment.rs  print_interview.rs
derive-wizard/examples/backends/: dialoguer.rs  dialoguer_password.rs  dialoguer_suggestions.rs  dialoguer_validation.rs  egui.rs  egui_assumptions_and_suggestions.rs  egui_suggestions.rs  egui_validation.rs  ratatui.rs  ratatui_job_application.rs  ratatui_multi_select.rs  ratatui_pizza.rs  ratatui_server_config.rs  typst_multi_select.rs  typst_rental_application.rs
derive-wizard/examples/basic/: enum_transport.rs  nested_structs.rs  pathbuf.rs  simple_struct.rs
derive-wizard/examples/builders/: builder_api.rs  builder_comprehensive.rs  builder_egui.rs
derive-wizard/examples/features/: assumptions.rs  editor.rs  multi_select.rs  multiline.rs  nested_validation.rs  password_masking.rs  prelude_epilogue.rs  suggestions.rs  typst_form.rs  validation.rs
derive-wizard/src/: answer.rs  backend.rs  dialoguer_backend.rs  field_path.rs  lib.rs  requestty_backend.rs  typst_form.rs
derive-wizard/src/backend/: dialoguer_backend.rs  egui_backend.rs  ratatui_backend.rs  requestty_backend.rs  typst_backend.rs
derive-wizard/tests/: wizard_tests.rs
docs/: implementation-plan.md  new-architecture.md
elicitor/: Cargo.toml  README.md
elicitor-doc-html/: Cargo.toml
elicitor-doc-html/src/: generator.rs
elicitor-doc-latex/: Cargo.toml
elicitor-doc-latex/examples/: latex_spooky_forest.rs
elicitor-form-egui/: Cargo.toml
elicitor-form-egui/src/: backend.rs
elicitor-form-ratatui/: Cargo.toml
elicitor-macro/: Cargo.toml
elicitor-types/: Cargo.toml
elicitor-wizard-dialoguer/: Cargo.toml
elicitor-wizard-dialoguer/src/: backend.rs
elicitor-wizard-ratatui/: Cargo.toml
elicitor-wizard-requestty/: Cargo.toml
elicitor/src/: lib.rs
example-surveys/: Cargo.toml
example-wizard/: Cargo.toml
(+19 files in other folders)
