[workspace]

default-members = ["derive-survey"]

members = [
    "derive-survey",
    "derive-dialoguer-wizard",
    "derive-egui-form",
    "derive-html-document",
    "derive-survey-macro",
    "derive-requestty-wizard",
    "derive-survey-types",
    "derive-wizard",
    "example-wizard",
]

resolver = "3"
