[workspace]

default-members = ["derive-survey"]

members = [
    "derive-survey",
    "derive-dialoguer-wizard",
    "derive-egui-form",
    "derive-html-document",
    "derive-survey-macro",
    "derive-ratatui-wizard",
    "derive-requestty-wizard",
    "derive-survey-types",
    "example-surveys",
]

resolver = "3"
