[workspace]

resolver = "3"

default-members = ["derive-survey"]

members = [
    "derive-survey",
    "derive-dialoguer-wizard",
    "derive-egui-form",
    "derive-html-document",
    "derive-survey-macro",
    "derive-ratatui-wizard",
    "derive-ratatui-form",
    "derive-requestty-wizard",
    "derive-survey-types",
    "example-surveys",
    "derive-latex-document",
]
