[package]
name = "derive-egui-form"
version = "0.1.0"
edition = "2024"
description = "egui form backend for derive-survey (GUI fill-in form)"
license = "MIT OR Apache-2.0"

[dependencies]
derive-survey = { path = "../derive-survey" }
eframe = { version = "0.31", default-features = false, features = [
    "glow",
    "default_fonts",
    "x11",
    "wayland",
] }
egui = "0.31"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
anyhow = "1"
example-surveys = { path = "../example-surveys" }
