[package]
name = "derive-ratatui-wizard"
version = "0.1.0"
edition = "2024"
description = "Ratatui wizard backend for derive-survey (TUI step-by-step prompts)"
license = "MIT OR Apache-2.0"

[dependencies]
derive-survey = { path = "../derive-survey" }
ratatui = "0.30"
crossterm = "0.29"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
anyhow = "1"
example-surveys = { path = "../example-surveys" }
