[package]
name = "derive-requestty-wizard"
version = "0.1.0"
edition = "2024"
description = "Requestty wizard backend for derive-survey (CLI step-by-step prompts)"
license = "MIT OR Apache-2.0"

[dependencies]
derive-survey = { path = "../derive-survey" }
requestty = "0.5"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
# Tests require interactive input, so we mostly test compilation

[[example]]
name = "simple"
path = "examples/simple.rs"
