[package]
name = "derive-survey-macro"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Procedural macro to derive Survey implementations for Rust types."
repository = "https://github.com/barafael/derive-wizard"

[lib]
proc-macro = true

[dependencies]
derive-survey-types = { version = "0.1", path = "../derive-survey-types" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
anyhow = "1"
