[package]
name = "derive-survey-types"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core types for the derive-survey crate - presentation-agnostic survey definitions."
repository = "https://github.com/barafael/derive-survey"

[dependencies]
anyhow = "1"
thiserror = "2"
