[package]
name = "derive-survey"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Derive interactive surveys for Rust types. Backend-agnostic."
repository = "https://github.com/barafael/derive-wizard"

[dependencies]
derive-survey-types = { version = "0.1", path = "../derive-survey-types" }
derive-survey-macro = { version = "0.1", path = "../derive-survey-macro" }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
