[package]
name = "derive-wizard-macro"
version = "0.5.0-use-the-elicitor-crate-instead"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Procedural macro to derive interactive wizard-like user input for Rust types."
repository = "https://github.com/barafael/derive-wizard"

[lib]
proc-macro = true

[dependencies]
derive-wizard-types = { version = "0.5.0-use-the-elicitor-crate-instead", path = "../derive-wizard-types" }
proc-macro2 = "1"
quote = "1"
syn = "2"
