[package]
name = "derive-wizard"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/barafael/derive-wizard"
license = "MIT OR Apache-2.0"
description = "Derives interactive wizard-like user input for Rust types. Backend-agnostic (supports at least requestty and egui)."

[dependencies]
derive-wizard-macro = { version = "0.1", path = "../derive-wizard-macro" }
derive-wizard-types = { version = "0.1", path = "../derive-wizard-types" }
requestty = { version = "0.6", optional = true }
thiserror = "2"
egui = { version = "0.29", optional = true }
eframe = { version = "0.29", optional = true }
dialoguer = { version = "0.11", optional = true }

[features]
default = ["requestty-backend"]
requestty-backend = ["requestty"]
egui-backend = ["egui", "eframe"]
dialoguer-backend = ["dialoguer"]

[[example]]
name = "egui_demo"
required-features = ["egui-backend"]

[[example]]
name = "egui_defaults_demo"
required-features = ["egui-backend"]

[[example]]
name = "dialoguer_demo"
required-features = ["dialoguer-backend"]

[[example]]
name = "dialoguer_defaults_demo"
required-features = ["dialoguer-backend"]

[[example]]
name = "dialoguer_password_demo"
required-features = ["dialoguer-backend"]
