[package]
name = "derive-wizard"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/barafael/derive-wizard"
license = "MIT OR Apache-2.0"
description = "Derives interactive wizard-like user input for Rust types. Backend-agnostic (supports at least requestty and egui)."

[dependencies]
derive-wizard-macro = { version = "0.4", path = "../derive-wizard-macro" }
derive-wizard-types = { version = "0.4", path = "../derive-wizard-types" }
requestty = { version = "0.6", optional = true }
thiserror = "2"
egui = { version = "0.29", optional = true }
eframe = { version = "0.29", optional = true }
dialoguer = { version = "0.11", optional = true }
typst = { version = "0.12", optional = true }

[features]
default = ["requestty-backend"]
requestty-backend = ["requestty"]
egui-backend = ["egui", "eframe"]
dialoguer-backend = ["dialoguer"]
typst-backend = ["typst"]
typst-form = []

[[example]]
name = "egui"
path = "examples/backends/egui.rs"
required-features = ["egui-backend"]

[[example]]
name = "egui_suggestions"
path = "examples/backends/egui_suggestions.rs"
required-features = ["egui-backend"]

[[example]]
name = "egui_assumptions_and_suggestions"
path = "examples/backends/egui_assumptions_and_suggestions.rs"
required-features = ["egui-backend"]

[[example]]
name = "dialoguer"
path = "examples/backends/dialoguer.rs"
required-features = ["dialoguer-backend"]

[[example]]
name = "dialoguer_suggestions"
path = "examples/backends/dialoguer_suggestions.rs"
required-features = ["dialoguer-backend"]

[[example]]
name = "dialoguer_password"
path = "examples/backends/dialoguer_password.rs"
required-features = ["dialoguer-backend"]

[[example]]
name = "builder_egui"
path = "examples/builders/builder_egui.rs"
required-features = ["egui-backend"]

# Basic examples
[[example]]
name = "simple_struct"
path = "examples/basic/simple_struct.rs"

[[example]]
name = "enum_transport"
path = "examples/basic/enum_transport.rs"

[[example]]
name = "nested_structs"
path = "examples/basic/nested_structs.rs"

[[example]]
name = "pathbuf"
path = "examples/basic/pathbuf.rs"

# Feature examples
[[example]]
name = "validation"
path = "examples/features/validation.rs"

[[example]]
name = "password_masking"
path = "examples/features/password_masking.rs"

[[example]]
name = "multiline"
path = "examples/features/multiline.rs"

[[example]]
name = "suggestions"
path = "examples/features/suggestions.rs"

[[example]]
name = "assumptions"
path = "examples/features/assumptions.rs"

[[example]]
name = "prelude_epilogue"
path = "examples/features/prelude_epilogue.rs"

[[example]]
name = "typst_form"
path = "examples/features/typst_form.rs"
required-features = ["typst-form"]

# Builder examples
[[example]]
name = "builder_api"
path = "examples/builders/builder_api.rs"

[[example]]
name = "builder_comprehensive"
path = "examples/builders/builder_comprehensive.rs"

# Advanced examples
[[example]]
name = "deeply_nested"
path = "examples/advanced/deeply_nested.rs"

[[example]]
name = "nested_enum_payment"
path = "examples/advanced/nested_enum_payment.rs"
