[package]
name = "derive-wizard"
version = "0.5.0-use-the-elicitor-crate-instead"
edition = "2024"
repository = "https://github.com/barafael/derive-wizard"
license = "MIT OR Apache-2.0"
description = "Derives interactive wizard-like user input for Rust types. Backend-agnostic (supports at least requestty and egui)."

[dependencies]
derive-wizard-macro = { version = "0.5.0-use-the-elicitor-crate-instead", path = "../derive-wizard-macro" }
derive-wizard-types = { version = "0.5.0-use-the-elicitor-crate-instead", path = "../derive-wizard-types" }
requestty = { version = "0.6", optional = true }
thiserror = "2"
egui = { version = "0.33", optional = true }
eframe = { version = "0.33", optional = true }
dialoguer = { version = "0.12", optional = true }
typst = { version = "0.14", optional = true }
itertools = { version = "0.14", optional = true }
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }

[features]
default = ["requestty-backend"]
requestty-backend = ["dep:requestty"]
egui-backend = ["dep:egui", "dep:eframe", "dep:itertools"]
dialoguer-backend = ["dep:dialoguer"]
ratatui-backend = ["dep:ratatui", "dep:crossterm"]
typst-backend = ["dep:typst"]
typst-form = []

[[example]]
name = "egui"
path = "examples/backends/egui.rs"
required-features = ["egui-backend"]

[[example]]
name = "egui_suggestions"
path = "examples/backends/egui_suggestions.rs"
required-features = ["egui-backend"]

[[example]]
name = "egui_assumptions_and_suggestions"
path = "examples/backends/egui_assumptions_and_suggestions.rs"
required-features = ["egui-backend"]

[[example]]
name = "egui_validation"
path = "examples/backends/egui_validation.rs"
required-features = ["egui-backend"]

[[example]]
name = "egui_multi_select"
path = "examples/backends/egui_multi_select.rs"
required-features = ["egui-backend"]

[[example]]
name = "dialoguer"
path = "examples/backends/dialoguer.rs"
required-features = ["dialoguer-backend"]

[[example]]
name = "ratatui"
path = "examples/backends/ratatui.rs"
required-features = ["ratatui-backend"]

[[example]]
name = "ratatui_pizza"
path = "examples/backends/ratatui_pizza.rs"
required-features = ["ratatui-backend"]

[[example]]
name = "ratatui_job_application"
path = "examples/backends/ratatui_job_application.rs"
required-features = ["ratatui-backend"]

[[example]]
name = "ratatui_multi_select"
path = "examples/backends/ratatui_multi_select.rs"
required-features = ["ratatui-backend"]

[[example]]
name = "ratatui_server_config"
path = "examples/backends/ratatui_server_config.rs"
required-features = ["ratatui-backend"]

[[example]]
name = "dialoguer_suggestions"
path = "examples/backends/dialoguer_suggestions.rs"
required-features = ["dialoguer-backend"]

[[example]]
name = "dialoguer_password"
path = "examples/backends/dialoguer_password.rs"
required-features = ["dialoguer-backend"]

[[example]]
name = "dialoguer_validation"
path = "examples/backends/dialoguer_validation.rs"
required-features = ["dialoguer-backend"]

[[example]]
name = "dialoguer_multi_select"
path = "examples/backends/dialoguer_multi_select.rs"
required-features = ["dialoguer-backend"]

[[example]]
name = "requestty_multi_select"
path = "examples/backends/requestty_multi_select.rs"
required-features = ["requestty-backend"]

[[example]]
name = "builder_egui"
path = "examples/builders/builder_egui.rs"
required-features = ["egui-backend"]

# Basic examples
[[example]]
name = "simple_struct"
path = "examples/basic/simple_struct.rs"

[[example]]
name = "enum_transport"
path = "examples/basic/enum_transport.rs"

[[example]]
name = "nested_structs"
path = "examples/basic/nested_structs.rs"

[[example]]
name = "pathbuf"
path = "examples/basic/pathbuf.rs"

# Feature examples
[[example]]
name = "validation"
path = "examples/features/validation.rs"

[[example]]
name = "password_masking"
path = "examples/features/password_masking.rs"

[[example]]
name = "multiline"
path = "examples/features/multiline.rs"

[[example]]
name = "suggestions"
path = "examples/features/suggestions.rs"

[[example]]
name = "assumptions"
path = "examples/features/assumptions.rs"

[[example]]
name = "prelude_epilogue"
path = "examples/features/prelude_epilogue.rs"

[[example]]
name = "typst_form"
path = "examples/features/typst_form.rs"
required-features = ["typst-form"]

[[example]]
name = "typst_multi_select"
path = "examples/backends/typst_multi_select.rs"
required-features = ["typst-form"]

[[example]]
name = "typst_rental_application"
path = "examples/backends/typst_rental_application.rs"
required-features = ["typst-form"]

[[example]]
name = "nested_validation"
path = "examples/features/nested_validation.rs"
required-features = ["requestty-backend"]

[[example]]
name = "egui_nested_validation"
path = "examples/features/egui_nested_validation.rs"
required-features = ["egui-backend"]

[[example]]
name = "multi_select"
path = "examples/features/multi_select.rs"
required-features = ["dialoguer-backend"]

# Builder examples
[[example]]
name = "builder_api"
path = "examples/builders/builder_api.rs"

[[example]]
name = "builder_comprehensive"
path = "examples/builders/builder_comprehensive.rs"

# Advanced examples
[[example]]
name = "deeply_nested"
path = "examples/advanced/deeply_nested.rs"

[[example]]
name = "enum_structure"
path = "examples/advanced/enum_structure.rs"

[[example]]
name = "nested_enum_payment"
path = "examples/advanced/nested_enum_payment.rs"

[[example]]
name = "print_interview"
path = "examples/advanced/print_interview.rs"
