[package]
name = "elicitor-doc-html"
version = "0.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/barafael/elicitor"
description = "HTML document generator for elicitor (generates fillable HTML forms)"

[dependencies]
elicitor = { version = "0.6.1", path = "../elicitor" }

[dev-dependencies]
example-surveys = { path = "../example-surveys" }
