[package]
name = "elicitor-doc-latex"
version = "0.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/barafael/elicitor"
description = "Backend for elicitor: generates fillable LaTeX forms from SurveyDefinition."

[dependencies]
elicitor = { version = "0.6.1", path = "../elicitor" }

[dev-dependencies]
example-surveys = { path = "../example-surveys" }
anyhow = "1"
