[package]
name = "elicitor-form-ratatui"
version = "0.6.1"
edition = "2024"
description = "Ratatui form backend for elicitor (TUI form with all fields visible)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/barafael/elicitor"

[dependencies]
elicitor = { version = "0.6.1", path = "../elicitor" }
ratatui = "0.30"
crossterm = "0.29"
thiserror = "2"

[dev-dependencies]
anyhow = "1"
example-surveys = { path = "../example-surveys" }
