[package]
name = "elicitor-macro"
version = "0.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Procedural macro to derive Survey implementations for Rust types."
repository = "https://github.com/barafael/elicitor"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
anyhow = "1"
elicitor-types = { version = "0.6.1", path = "../elicitor-types" }
