[package]
name = "elicitor-wizard-dialoguer"
version = "0.6.0"
edition = "2024"
description = "Dialoguer wizard backend for elicitor (CLI step-by-step prompts)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/barafael/elicitor"

[dependencies]
elicitor = { version = "0.6.0", path = "../elicitor" }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
anyhow = "1"
example-surveys = { path = "../example-surveys" }
