[package]
name = "elicitor-wizard-requestty"
version = "0.6.1"
edition = "2024"
description = "Requestty wizard backend for elicitor (CLI step-by-step prompts)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/barafael/elicitor"

[dependencies]
elicitor = { version = "0.6.1", path = "../elicitor" }
requestty = "0.5"
anyhow = "1"
thiserror = "2"

[dev-dependencies]
anyhow = "1"
example-surveys = { path = "../example-surveys" }
