[package]
name = "elicitor"
version = "0.6.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Derive interactive surveys for Rust types. Backend-agnostic. Backends are provided in elicitor-wizard-requestty, elicitor-wizard-ratatui, elicitor-form-egui, and many others."
repository = "https://github.com/barafael/elicitor"

[dependencies]
elicitor-types = { version = "0.6.1", path = "../elicitor-types" }
elicitor-macro = { version = "0.6.1", path = "../elicitor-macro" }
thiserror = "2"

[dev-dependencies]
anyhow = "1"
